# wasmer-project

./: Cargo.toml  README.md
examples/: errors.rs  helloworld.rs  instance.rs
src/: main.rs
