[package]
name = "wasmer-project"
version = "0.1.0"
authors = ["ttang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
wasmer = "2.0.0-rc1"
wasmer-compiler-cranelift = "2.0.0-rc1"
wasmer-engine-universal = "2.0.0-rc1"